hard-gists/2623926/run.log
=== Docker Run Log for 2623926 ===
Started at: Mi 29. Okt 13:09:58 CET 2025

[2025-10-29 13:09:58] START: Running container for 2623926
[2025-10-29 13:09:59] SUCCESS: Container f73402e2d772d352771e03a001c576fa0f48c73bd6e80960fb531efd57098037 started for 2623926
=== Container logs for 2623926 ===
  File "/snippet.py", line 16
    print mx
    ^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2623926 ===
[2025-10-29 13:10:01] INFO: Container f73402e2d772d352771e03a001c576fa0f48c73bd6e80960fb531efd57098037 has stopped
